@@ -74,9 +74,6 @@ public:
   // get a list of all parameters, or an empty list if the section is not found
   virtual std::list<std::string> getKeys(const std::string& section) const = 0;
 
-  // get a list of all sections
-  virtual std::list<std::string> getSections() const = 0;
-
 protected:
 
 };
